# BayesianNetworkMMM

./: .dockerignore  .replit  BUNDLE_SUMMARY.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  README.md  deploy.sh  package-lock.json  package.json  pyproject.toml  replit.md  vercel.json
.github/workflows/: deploy.yml
attached_assets/: Causal Impact of BII on Visits and FS Submits_1752944231442.ipynb
client/public/: sample_mmm_data.csv
client/src/: App.tsx  index.css  main.tsx
client/src/components/: dag-canvas.tsx  dag-node.tsx  data-upload-dialog.tsx  node-edit-dialog.tsx  node-palette.tsx  properties-panel.tsx
client/src/contexts/: dag-context.tsx
client/src/lib/: causal-modeling.ts  dag-validation.ts  node-types.ts
client/src/pages/: analysis-results.tsx  dag-builder.tsx  dag-builder.tsx.backup  dag-details.tsx
server/: causal_analysis_pymc_authentic.py  index.ts  routes.ts  storage.ts
shared/: schema.ts
